Update Fem workbench
Adding new materials and making some of the objects to python objects

--- a/src/Mod/Fem/App/CMakeLists.txt
+++ b/src/Mod/Fem/App/CMakeLists.txt
@@ -132,7 +132,10 @@ fc_target_copy_resource(Fem
 	${Driver_Resources} 
 	Init.py 
     convert2TetGen.py
-    FemLib.py)
+    FemLib.py
+    MechanicalAnalysis.py
+    MechanicalMaterial.py
+    )
 
 	
 if(MSVC)
