--- a/src/Mod/Material/CMakeLists.txt
+++ b/src/Mod/Material/CMakeLists.txt
@@ -8,12 +8,14 @@ SET(Material_SRCS
 SOURCE_GROUP("" FILES ${Material_SRCS})
 
 # collect all the material cards:
-FILE( GLOB MaterialLib_Files ./StandardMaterial/*.FCMat ./StandardMaterial/*.txt  )
+#FILE( GLOB MaterialLib_Files ./StandardMaterial/*.FCMat ./StandardMaterial/*.txt  )
 
-#SET (MaterialLib_Files
-#    StandardMaterial/Steel.FCMat
-#	StandardMaterial/Readme.txt
-#	)
+SET (MaterialLib_Files
+    Steel.FCMat
+    ABS.FCMat
+    PLA.FCMat
+	Readme.txt
+	)
 
 SET(all_files ${Material_SRCS})
 
@@ -22,9 +24,10 @@ ADD_CUSTOM_TARGET(Material ALL
 )
 
 fc_copy_sources(Material "${CMAKE_BINARY_DIR}/Mod/Material" ${all_files})
+
 fc_target_copy_resource(Material 
-    ${CMAKE_SOURCE_DIR}/src/Mod/Material
-    ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Material
+    ${CMAKE_SOURCE_DIR}/src/Mod/Material/StandardMaterial
+    ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Material/StandardMaterial
     ${MaterialLib_Files})
 
 INSTALL(
