Fix Material target

--- a/src/Mod/Material/CMakeLists.txt
+++ b/src/Mod/Material/CMakeLists.txt
@@ -11,11 +11,11 @@ SOURCE_GROUP("" FILES ${Material_SRCS})
 #FILE( GLOB MaterialLib_Files ./StandardMaterial/*.FCMat ./StandardMaterial/*.txt  )
 
 SET (MaterialLib_Files
-    Steel.FCMat
-    ABS.FCMat
-    PLA.FCMat
-	Readme.txt
-	)
+    StandardMaterial/Steel.FCMat
+    StandardMaterial/ABS.FCMat
+    StandardMaterial/PLA.FCMat
+    StandardMaterial/Readme.txt
+)
 
 SET(all_files ${Material_SRCS})
 
@@ -26,8 +26,8 @@ ADD_CUSTOM_TARGET(Material ALL
 fc_copy_sources(Material "${CMAKE_BINARY_DIR}/Mod/Material" ${all_files})
 
 fc_target_copy_resource(Material 
-    ${CMAKE_SOURCE_DIR}/src/Mod/Material/StandardMaterial
-    ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Material/StandardMaterial
+    ${CMAKE_SOURCE_DIR}/src/Mod/Material
+    ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_DATADIR}/Mod/Material
     ${MaterialLib_Files})
 
 INSTALL(
