--- a/src/3rdParty/salomesmesh/CMakeLists.txt
+++ b/src/3rdParty/salomesmesh/CMakeLists.txt
@@ -99,6 +99,9 @@ INCLUDE(CMakeDetermineFortranCompiler)
 ############################
 IF (${CMAKE_SIZEOF_VOID_P} MATCHES "8") # It is 64bit, 32 bit systems returns 4
     ADD_DEFINITIONS(-D_OCC64)
+    IF(CMAKE_COMPILER_IS_GNUCXX)
+        ADD_DEFINITIONS(-DPCLINUX64)
+    ENDIF(CMAKE_COMPILER_IS_GNUCXX)
     #MESSAGE("-- Build 64bit")
 ELSE (${CMAKE_SIZEOF_VOID_P} MATCHES "8")
     #MESSAGE("-- Build 32bit")
@@ -413,12 +416,6 @@ elseif(MINGW)
     set_target_properties(StdMeshers PROPERTIES PREFIX "")
 else(MSVC)
     TARGET_LINK_LIBRARIES(StdMeshers SMESH ${SMESH_LIBS}  MEFISTO2)
-    # special compiler flag for g++ 64-bit
-    IF (${CMAKE_SIZEOF_VOID_P} MATCHES "8")
-        IF(CMAKE_COMPILER_IS_GNUCXX)
-            SET(StdMeshers_CFLAGS "${StdMeshers_CFLAGS} -DPCLINUX64")
-        ENDIF(CMAKE_COMPILER_IS_GNUCXX)
-    ENDIF(${CMAKE_SIZEOF_VOID_P} MATCHES "8")
     set_target_properties(StdMeshers PROPERTIES COMPILE_FLAGS "${StdMeshers_CFLAGS}")
     set_target_properties(StdMeshers PROPERTIES OUTPUT_NAME "StdMeshers") 
     set_target_properties(StdMeshers PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
