Raytracing: Added RadiosityNormal povray template

--- a/src/Mod/Raytracing/App/CMakeLists.txt
+++ b/src/Mod/Raytracing/App/CMakeLists.txt
@@ -59,6 +59,7 @@ SET(Raytracing_Scripts
 
 SET(Raytracing_Templates
     Templates/ProjectStd.pov
+    Templates/RadiosityNormal.pov
 )
 
 add_library(Raytracing SHARED ${Raytracing_SRCS})
