Raytracing: Added lux camera export function

--- a/src/Mod/Raytracing/App/CMakeLists.txt
+++ b/src/Mod/Raytracing/App/CMakeLists.txt
@@ -42,6 +42,8 @@ SET(Raytracing_SRCS
     FreeCADpov
     PovTools.cpp
     PovTools.h
+    LuxTools.cpp
+    LuxTools.h
     PreCompiled.cpp
     PreCompiled.h
     RayFeature.cpp
