0001239: Part --> Geometric Primitives --> Regular Prism

--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -163,6 +163,8 @@ SET(PartGui_SRCS
     ViewProviderCylinderParametric.h
     ViewProviderConeParametric.cpp
     ViewProviderConeParametric.h
+    ViewProviderPrism.cpp
+    ViewProviderPrism.h
     ViewProviderTorusParametric.cpp
     ViewProviderTorusParametric.h
     ViewProviderCurveNet.cpp
