+ Add Luxrender template file to build process

--- a/src/Mod/Raytracing/App/CMakeLists.txt
+++ b/src/Mod/Raytracing/App/CMakeLists.txt
@@ -64,6 +64,7 @@ SET(Raytracing_Scripts
 )
 
 SET(Raytracing_Templates
+    Templates/LuxClassic.lxs
     Templates/ProjectStd.pov
     Templates/RadiosityNormal.pov
 )
