Show current build type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -487,7 +487,8 @@ IF(MSVC)
 	ENDIF(CMAKE_SIZEOF_VOID_P EQUAL 4)
 ELSE(MSVC)
 	SET (CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DFC_DEBUG")
-	MESSAGE(STATUS "DEBUG: ${CMAKE_CXX_FLAGS_DEBUG}")
+        #MESSAGE(STATUS "DEBUG: ${CMAKE_CXX_FLAGS_DEBUG}")
+        MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 ENDIF(MSVC)
 IF(MINGW)
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mthreads")
