0001278: No build possible with current CMake version 2.8.12

--- a/src/Mod/Image/Gui/CMakeLists.txt
+++ b/src/Mod/Image/Gui/CMakeLists.txt
@@ -30,8 +30,7 @@ SET(ImageGui_RES_SRCS
     Resources/Image.qrc
 )
 
-fc_add_resources(ImageGui_QRC_SRCS ${ImageGui_RES_SRCS})
-#QT4_ADD_RESOURCES(ImageGui_QRC_SRCS ${ImageGui_RES_SRCS})
+qt4_add_resources(ImageGui_QRC_SRCS ${ImageGui_RES_SRCS})
 
 set(ImageGui_UIC_SRCS
     ImageOrientationDialog.ui
@@ -40,7 +39,7 @@ qt4_wrap_ui(ImageGui_UIC_HDRS ${ImageGui_UIC_SRCS})
 
 SET(ImageGui_SRCS
 #   ${ImageGui_MOC_SRCS}
-#   ${ImageGui_QRC_SRCS}
+    ${ImageGui_QRC_SRCS}
     ${ImageGui_UIC_HDRS}
     AppImageGui.cpp
     AppImageGuiPy.cpp
