--- a/src/Mod/Mesh/Gui/CMakeLists.txt
+++ b/src/Mod/Mesh/Gui/CMakeLists.txt
@@ -75,9 +75,9 @@ SET(Inventor_SRCS
 )
 SOURCE_GROUP("Inventor" FILES ${Inventor_SRCS})
 
-fc_add_resources(resource_SRCS Resources/Mesh.qrc)
+qt4_add_resources(resource_SRCS Resources/Mesh.qrc)
 SET(resource_SRCS
-#   ${resource_SRCS}
+    ${resource_SRCS}
     Resources/Mesh.qrc
 )
 SOURCE_GROUP("resource" FILES ${resource_SRCS})
