+ Special view provider to display splines

--- a/src/Mod/Part/App/CMakeLists.txt
+++ b/src/Mod/Part/App/CMakeLists.txt
@@ -101,6 +101,8 @@ SET(Features_SRCS
     FeaturePartPolygon.h
     FeaturePartSection.cpp
     FeaturePartSection.h
+    FeaturePartSpline.cpp
+    FeaturePartSpline.h
     FeatureChamfer.cpp
     FeatureChamfer.h
     FeatureCompound.cpp
