--- a/src/Mod/Part/Gui/CMakeLists.txt
+++ b/src/Mod/Part/Gui/CMakeLists.txt
@@ -169,6 +169,8 @@ SET(PartGui_SRCS
     ViewProviderTorusParametric.h
     ViewProviderCurveNet.cpp
     ViewProviderCurveNet.h
+    ViewProviderSpline.cpp
+    ViewProviderSpline.h
     ViewProviderImport.cpp
     ViewProviderImport.h
     ViewProviderExtrusion.cpp
