--- a/src/Mod/Drawing/App/CMakeLists.txt
+++ b/src/Mod/Drawing/App/CMakeLists.txt
@@ -29,6 +29,8 @@ SET(Features_SRCS
     FeatureViewPart.h
     FeatureViewAnnotation.cpp
     FeatureViewAnnotation.h
+    FeatureViewSymbol.cpp
+    FeatureViewSymbol.h
     FeatureClip.cpp
     FeatureClip.h
     PageGroup.cpp
