--- a/src/Mod/MeshPart/App/CMakeLists.txt
+++ b/src/Mod/MeshPart/App/CMakeLists.txt
@@ -22,13 +22,22 @@ include_directories(
 link_directories(${OCC_LIBRARY_DIR})
 
 
-set(MeshPart_LIBS
-    Part
-    Mesh
-    StdMeshers
-    #NETGENPlugin
-    SMESH
-)
+if(FREECAD_BUILD_FEM_NETGEN)
+    set(MeshPart_LIBS
+        Part
+        Mesh
+        StdMeshers
+        NETGENPlugin
+        SMESH
+    )
+else(FREECAD_BUILD_FEM_NETGEN)
+    set(MeshPart_LIBS
+        Part
+        Mesh
+        StdMeshers
+        SMESH
+    )
+endif(FREECAD_BUILD_FEM_NETGEN)
 
 
 SET(MeshPart_SRCS
