+ Fix FEM install target

--- a/src/Mod/Fem/CMakeLists.txt
+++ b/src/Mod/Fem/CMakeLists.txt
@@ -11,6 +11,11 @@ INSTALL(
         InitGui.py
         convert2TetGen.py
         FemExample.py
+        FemLib.py
+        MechanicalAnalysis.py
+        MechanicalMaterial.py
+        MechanicalMaterial.ui
+        MechanicalAnalysis.ui
     DESTINATION
         Mod/Fem
 )
